Make the exported image a link that downloads the image as a PNG file when clicked.

--- a/svg-playground.html
+++ b/svg-playground.html
@@ -68,7 +68,7 @@
     .drawing {
       z-index: 3;
     }
-    .exported {
+    .export-link {
       position: absolute;
       opacity: 1;
       background-color: black;
@@ -76,7 +76,7 @@
   </style>
 </head>
 <body>
-  <div class="exported"></div>
+  <a class="export-link"></a>
   <div class="playground">
     <div class="background layer"></div>
     <img class="template layer" src="svg-template.png" />
@@ -86,7 +86,7 @@
     <script>
       setUpPlayground();
       drawSvg();
-      exportSvg();
+      exportSvgAsPngFile();
 
       function setUpPlayground() {
         let playground = document.getElementsByClassName('playground')[0];
@@ -105,10 +105,6 @@
       function drawSvg() {
         let drawing = document.getElementsByClassName('drawing')[0];
         drawing.setAttribute('style', `opacity: ${drawingOpacity}`);
-
-        drawing.addEventListener('click', function() {
-          console.log('Click on drawing detected.');
-        });
 
         let drawingMask =
             document.createElementNS("http://www.w3.org/2000/svg", 'mask');
@@ -416,27 +412,41 @@
         drawingMask.append(brightPlatformPath);
       }
 
-      function exportSvg() {
-        let drawing = document.getElementsByClassName('drawing')[0];
+      function exportSvgAsPngFile() {
+        const drawing = document.getElementsByClassName('drawing')[0];
         const drawingString = new XMLSerializer().serializeToString(drawing);
         const drawingDataUrl =
             `data:image/svg+xml;base64,${btoa(unescape(encodeURIComponent(drawingString)))}`
         console.log('Drawing data URL:');
         console.log(drawingDataUrl);
 
-        let exported = document.getElementsByClassName('exported')[0];
-        exported.setAttribute(
+        const exportLink = document.getElementsByClassName('export-link')[0];
+        exportLink.setAttribute(
             'style',
             `top: 0;
              left: ${100 * percentToPixelsFactor};
              height: ${100 * percentToPixelsFactor};
              width: ${100 * percentToPixelsFactor}`);
 
-        const exportedImg = new Image();
-        exportedImg.setAttribute('height', '100%');
-        exportedImg.setAttribute('width', '100%');
-        exportedImg.src = drawingDataUrl;
-        exported.appendChild(exportedImg);
+        const exportLinkImg = new Image();
+        exportLinkImg.setAttribute('height', '100%');
+        exportLinkImg.setAttribute('width', '100%');
+        exportLinkImg.onload = () => {
+          const canvas = document.createElement('canvas');
+          canvas.width = exportLinkImg.width;
+          canvas.height = exportLinkImg.height;
+          const ctx = canvas.getContext('2d');
+          ctx.drawImage(exportLinkImg, 0, 0);
+
+          const pngDataUrl = canvas.toDataURL('image/png');
+          console.log('PNG data URL:');
+          console.log(pngDataUrl);
+
+          exportLink.href = pngDataUrl;
+          exportLink.download = 'svg-playground.png';
+        };
+        exportLinkImg.src = drawingDataUrl;
+        exportLink.appendChild(exportLinkImg);
       }
 
       function computeLinesIntersection(x1, y1, slope1, x2, y2, slope2) {
