Branch the existing white template into a new red one, rename the existing one to indicate that it's white, modify the HTML file to use the red one, move the template on top of the drawing, and change the opacity of the drawing to 1.

--- a/svg-playground.html
+++ b/svg-playground.html
@@ -3,7 +3,7 @@
     const logoColor = 'white';
     const backgroundColor = 'green';
     const templateOpacity = 0.5;
-    const drawingOpacity = 0.5;
+    const drawingOpacity = 1;
     const useAlternateParamValues = true;
 
     const percentToPixelsFactor = chooseParamValue(7);
@@ -63,10 +63,10 @@
       opacity: 1;
     }
     .template {
-      z-index: 2;
+      z-index: 3;
     }
     .drawing {
-      z-index: 3;
+      z-index: 2;
     }
     .export-link {
       position: absolute;
@@ -79,7 +79,7 @@
   <a class="export-link"></a>
   <div class="playground">
     <div class="background layer"></div>
-    <img class="template layer" src="svg-template.png" />
+    <img class="template layer" src="svg-template-red.png" />
     <svg class="drawing layer">
       <!-- SVG content is added programmatically below. -->
     </svg>
